--- a/phantom-callback.html
+++ b/phantom-callback.html
@@ -1,60 +1,61 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Connexion en cours...</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Connexion en cours…</title>
   <style>
     body {
       margin: 0;
       height: 100vh;
       background: #000;
-      color: white;
-      font-family: system-ui, sans-serif;
+      color: #fff;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
-      gap: 20px;
+      gap: 24px;
     }
     .spinner {
-      width: 50px;
-      height: 50px;
-      border: 5px solid #333;
-      border-top: 5px solid #a855f7;
+      width: 56px;
+      height: 56px;
+      border: 6px solid #333;
+      border-top: 6px solid #a855f7;
       border-radius: 50%;
       animation: spin 1s linear infinite;
     }
     @keyframes spin {
       to { transform: rotate(360deg); }
     }
+    h2 { font-size: 1.5rem; margin: 0; }
+    p { margin: 0; color: #aaa; font-size: 0.95rem; }
   </style>
 </head>
 <body>
 
   <div class="spinner"></div>
-  <h2>Connexion à PumpLaunch...</h2>
-  <p>Ne ferme pas cette page</p>
+  <h2>Connexion à PumpLaunch…</h2>
+  <p>Redirection en cours, ne ferme pas cette page</p>
 
   <script>
-    // Cette page est ouverte par Phantom après la connexion
-    // On attend un peu que Phantom injecte le provider, puis on reconnecte automatiquement
-
+    // Cette page est ouverte par Phantom après la validation de la connexion
     setTimeout(async () => {
       try {
-        // Si Phantom est présent
+        // Phantom injecte automatiquement le provider quand il revient ici
         if (window.solana && window.solana.isPhantom) {
-          // On se reconnecte silencieusement (seulement si l'utilisateur a déjà approuvé)
-          await window.solana.connect({ onlyIfTrusted: true });
+          // Reconnexion silencieuse (seulement si déjà approuvé)
+          await window.solana.connect({ onlyIfTrusted: true }).catch(() => {});
         }
       } catch (e) {
-        // Rien à faire, on continue quand même
+        // On ignore les erreurs, on redirige quand même
       } finally {
-        // Retour vers la page principale
-        window.location.href = "/";
+        // Retour immédiat vers la page principale
+        window.location.replace(location.origin + "/");
       }
     }, 800);
   </script>
+
 </body>
 </html>
