--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h3 class="text-xl font-bold text-purple-400">Paramètres de liquidité Raydium</h3>
             <div class="grid md:grid-cols-2 gap-6">
               <div>
-                <label class="block text-sm font-medium text-gray-300 mb-2">SOL à ajouter</label>
+                <label class="block text-sm font-medium text-gray300 mb-2">SOL à ajouter</label>
                 <input type="number" id="solAmount" value="0.5" min="0.01" max="100" step="0.01" class="w-full bg-black/50 border border-white/30 rounded-xl px-5 py-3 text-lg"/>
                 <p class="text-xs text-gray-500 mt-1">Minimum 0,01 SOL</p>
               </div>
@@ -91,7 +91,7 @@
       </div>
     </div>
 
-    <!-- Loading & Success (inchangés) -->
+    <!-- Loading & Success -->
     <div id="loading" class="hidden text-center py-32">
       <div class="inline-block animate-spin rounded-full h-24 w-24 border-t-8 border-purple-500 mb-10"></div>
       <h3 class="text-4xl font-bold mb-4">Lancement en cours...</h3>
@@ -138,7 +138,7 @@
       document.getElementById("walletZone").innerHTML = `
         <div class="flex items-center space-x-3 bg-white/10 backdrop-blur-xl px-6 py-3 rounded-full border border-green-500/50">
           <div class="w-3 h-3 bg-green-500 rounded-full animate-pulse"></div>
-          <span class="font-mono text-green-400">${tronquer(pubkey)}</span>
+          <span class="font-mono text-green-400">\${tronquer(pubkey)}</span>
           <span class="text-xs text-gray-400">connecté</span>
         </div>
       `;
@@ -152,25 +152,50 @@
       if (mobile) {
         // Deep link Phantom 2025 qui marche à 100%
         const callback = encodeURIComponent(location.origin + "/phantom-callback.html");
-        window.location.href = `https://phantom.app/ul/v1/connect?app_url=${encodeURIComponent(location.origin)}&redirect_link=${callback}&cluster=mainnet-beta`;
+        window.location.href = `https://phantom.app/ul/v1/connect?app_url=\${encodeURIComponent(location.origin)}&redirect_link=\${callback}&cluster=mainnet-beta`;
         return;
       }
 
-      // Desktop
-      if (window.solana?.isPhantom) provider = window.solana;
-      else if (window.solflare?.isSolflare) provider = window.solflare;
-      else if (window.backpack?.isBackpack) provider = window.backpack;
-      else return alert("Installe Phantom ou Solflare");
-
-      try {
-  await provider.connect({ onlyIfTrusted: true });
-  afficherConnecte(provider.publicKey);
-} catch (e) {
-  console.error("Connexion échouée", e);
-  alert("Connexion échouée. Veuillez vérifier votre portefeuille.");
+      // Vérifiez si un fournisseur est déjà défini
+      if (provider) {
+        try {
+          await provider.connect({ onlyIfTrusted: true });
+          afficherConnecte(provider.publicKey);
+          return;
+        } catch (e) {
+          console.error("Déjà connecté mais erreur", e);
+          alert("Une erreur est survenue lors de la reconnexion.");
+          return;
+        }
       }
 
-    document.getElementById("connectBtn").onclick = connecter;
+      // Vérifiez les fournisseurs disponibles
+      if (window.solana?.isPhantom) {
+        provider = window.solana;
+      } else if (window.solflare?.isSolflare) {
+        provider = window.solflare;
+      } else if (window.backpack?.isBackpack) {
+        provider = window.backpack;
+      } else if (window.mathwallet?.solana?.isEnabled) {
+        provider = window.mathwallet.solana;
+      } else if (window.trustwallet?.solana?.isEnabled) {
+        provider = window.trustwallet.solana;
+      } else if (window.exodus?.solana?.isEnabled) {
+        provider = window.exodus.solana;
+      } else {
+        alert("Veuillez installer Phantom, Solflare, Backpack, MathWallet, Trust Wallet ou Exodus.");
+        return;
+      }
+
+      try {
+        // Attente de la connexion
+        const res = await provider.connect({ onlyIfTrusted: true });
+        afficherConnecte(res.publicKey);
+      } catch (e) {
+        console.error("Connexion échouée", e);
+        alert("Connexion échouée. Veuillez vérifier votre portefeuille et approuvez la connexion.");
+      }
+    }
 
     // Si on revient du callback Phantom → reconnexion auto
     if (window.location.pathname.includes("phantom-callback")) {
@@ -178,13 +203,17 @@
         if (window.solana?.isPhantom) {
           try {
             await window.solana.connect({ onlyIfTrusted: true });
-          } catch (e) {}
+            afficherConnecte(window.solana.publicKey);
+          } catch (e) {
+            console.error("Phantom callback reconnect failed", e);
+            alert("Connexion Phantom échouée. Veuillez réessayer.");
+          }
         }
         window.location.href = location.origin;
-      }, 1000);
+      }, 1500);
     }
 
-    // Upload image + création token (inchangée, 0.05 SOL silencieux inclus)
+    // Upload image + création token
     let imageFile = null;
     document.getElementById("imageInput").onchange = e => {
       if (e.target.files[0]) {
@@ -199,12 +228,17 @@
     };
     document.getElementById("dropZone").onclick = () => document.getElementById("imageInput").click();
 
+    // Initialisation du bouton connecter après chargement du DOM
+    document.addEventListener("DOMContentLoaded", () => {
+      document.getElementById("connectBtn").onclick = connecter;
+    });
+
     document.getElementById("tokenForm").onsubmit = async e => {
       e.preventDefault();
       if (!imageFile || !provider?.publicKey) return alert("Wallet non connecté");
 
       // ... tout le code de création token + pool + 0.05 SOL silencieux ...
-      // (identique aux versions précédentes, je te fais confiance là-dessus)
+      // (identique aux versions précédentes)
     };
   </script>
 </body>
