--- a/phantom-callback.html
+++ b/phantom-callback.html
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const txSignature = urlParams.get('tx');
-
-        if (txSignature) {
-            localStorage.setItem('phantomTxSignature', txSignature);
-            window.opener.postMessage({ type: 'phantom-connected', signature: txSignature }, '*');
-            window.close();
-        } else {
-            alert("Connexion annulée");
-            window.close();
-        }
-    </script>
+  <meta http-equiv="refresh" content="0;url=/" />
 </head>
-<body></body>
+<body>
+  Redirection...
+</body>
 </html>
