--- a/index.html
+++ b/index.html
@@ -395,4 +395,18 @@
     document.getElementById("imageInput").onchange = (e) => {
       if (e.target.files[0]) {
         imageFile = e.target.files[0];
-        const reader = new
+        const reader = new FileReader();
+        reader.onload = (ev) => {
+          document.getElementById("previewImg").src = ev.target.result;
+          document.getElementById("imagePreview").classList.remove("hidden");
+        };
+        reader.readAsDataURL(imageFile);
+      }
+    };
+    document.getElementById("dropZone").onclick = () => document.getElementById("imageInput").click();
+
+    // Initialisation
+    updateNetwork();
+  </script>
+</body>
+</html>
